objects/Governance_Request__c.object
<CustomObject>
    <fields>
        <fullName>Added_in_Data_Dictionary__c</fullName>
        <label>Added in Data Dictionary</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affected_Systems__c</fullName>
        <label>Affected Systems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cisco</fullName>
                </value>
                <value>
                    <fullName>cShare</fullName>
                </value>
                <value>
                    <fullName>SFDC</fullName>
                </value>
                <value>
                    <fullName>Incontact</fullName>
                </value>
                <value>
                    <fullName>Tableau</fullName>
                </value>
                <value>
                    <fullName>Inquisium Survey</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Internal Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Affected_Teams__c</fullName>
        <label>Affected Teams</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch</fullName>
                </value>
                <value>
                    <fullName>EB</fullName>
                </value>
                <value>
                    <fullName>Enterprise SMM</fullName>
                </value>
                <value>
                    <fullName>Event (Legacy Lanyon)</fullName>
                </value>
                <value>
                    <fullName>Event Phone</fullName>
                </value>
                <value>
                    <fullName>Groups (Legacy Lanyon)</fullName>
                </value>
                <value>
                    <fullName>Kapow</fullName>
                </value>
                <value>
                    <fullName>Meetings  (Legacy Lanyon)</fullName>
                </value>
                <value>
                    <fullName>OnArrival 360</fullName>
                </value>
                <value>
                    <fullName>Passkey  (Legacy Lanyon)</fullName>
                </value>
                <value>
                    <fullName>Quick Mobile</fullName>
                </value>
                <value>
                    <fullName>Social Tables</fullName>
                </value>
                <value>
                    <fullName>Success (Event Cloud)</fullName>
                </value>
                <value>
                    <fullName>Support Operations</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Travel/Transient  (Legacy Lanyon)</fullName>
                </value>
                <value>
                    <fullName>Wedding Spot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>DATEVALUE(Case_Closed_Date__c) - Approved_Date__c - Weekend_Days__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alternatives__c</fullName>
        <inlineHelpText>What other possible solutions were considered during the idea deveolopment?</inlineHelpText>
        <label>Alternatives</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Implementation_Date__c</fullName>
        <label>Anticipated Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Level_of_Effort__c</fullName>
        <label>Anticipated Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low (&lt; 5hours)</fullName>
                </value>
                <value>
                    <fullName>Medium (5-20 hours)</fullName>
                </value>
                <value>
                    <fullName>High (&gt;20 hours)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>Case__r.Owner:User.FirstName &amp;" "&amp; Case__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assignee__c</fullName>
        <label>Assignee</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Business_Reason__c</fullName>
        <label>Business Reason</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CMR_Presenter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Presenter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Governance_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Comments__c</fullName>
        <label>CRM Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_Project__c</fullName>
        <label>CRM Project #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CRM Release</label>
        <referenceTo>ResourceProject__c</referenceTo>
        <relationshipLabel>Governance Requests</relationshipLabel>
        <relationshipName>Governance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CRM Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Teams__c</fullName>
        <label>CRM Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CS_Comments__c</fullName>
        <label>CS Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Case_Closed_Date__c</fullName>
        <formula>Case__r.ClosedDate</formula>
        <label>Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Case_Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <label>Case Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>SF_Governance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changes_Approved_by_all_the_leadership__c</fullName>
        <label>Changes Approved by all the leadership?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Services_Team__c</fullName>
        <label>Client Services Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cloud__c</fullName>
        <label>Cloud</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Event Cloud</fullName>
                </value>
                <value>
                    <fullName>Hospitality Cloud</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complex</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Content_of_the_Request__c</fullName>
        <inlineHelpText>&gt; Product description (if a new SKU)
&gt; Exact SKU name (as per SF) and SKU code (if SKU modification)
&gt; Product Group and family (like HC vs EC and ie: Passkey vs Connect)
&gt; Exact description of what you want done to a SKU (full details)</inlineHelpText>
        <label>Content of the Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Implementation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Implementation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Completion_Date__c</fullName>
        <label>Expected Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FP_A__c</fullName>
        <label>Finance (FP &amp; A Team)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fast_Track__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Does this item need to be fast tracked?</inlineHelpText>
        <label>Fast Track</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Comments__c</fullName>
        <label>Finance Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Finance_SKU_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This request contains finance only SKUs</inlineHelpText>
        <label>Finance SKU Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Team__c</fullName>
        <label>Finance (CI Team)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Governance_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Governance Request</label>
        <referenceTo>Governance_Request__c</referenceTo>
        <relationshipLabel>Governance Requests</relationshipLabel>
        <relationshipName>Governance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Governance_Type__c</fullName>
        <label>Governance Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New_Field</fullName>
                    <label>New Field</label>
                </value>
                <value>
                    <fullName>New_Workflow</fullName>
                    <label>New Workflow</label>
                </value>
                <value>
                    <fullName>New Validation</fullName>
                </value>
                <value>
                    <fullName>Picklist Values</fullName>
                </value>
                <value>
                    <fullName>Process_Change</fullName>
                    <label>Process Change</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IT_Corp_Systems__c</fullName>
        <label>Data governance &amp; Salvation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Item_Title__c</fullName>
        <inlineHelpText>Succinct description of change request. Should be less than a sentence.</inlineHelpText>
        <label>Item Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JIRA_Link__c</fullName>
        <inlineHelpText>This field captures the JIRA ticket link for this enhancement</inlineHelpText>
        <label>JIRA Link</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Management_Comments__c</fullName>
        <label>Data governance &amp; Salvation Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal_Comments__c</fullName>
        <label>Legal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Legal__c</fullName>
        <label>Legal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conceptually Approved</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Comments__c</fullName>
        <label>Marketing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing__c</fullName>
        <label>Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMO_Comments__c</fullName>
        <label>PMO Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PMO__c</fullName>
        <label>PMO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Post_Approval_Implementer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>After this item has been execution approved, indicate the main person who will get this implemented.</inlineHelpText>
        <label>Post-Approval Implementer:</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Governance_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Presenter_If_Other__c</fullName>
        <description>If the presenter is different from the one who submitted this request.</description>
        <label>Presenter (If Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <inlineHelpText>Low -Change is useful to department, but may not have a significant impact on business. 
Normal -Change has a low to medium impact on business success. 
High -Change has a significant impact on business. Change needs to be implemented within 2 weeks.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution__c</fullName>
        <label>Proposed Solution</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Readiness_Project_Number__c</fullName>
        <label>Readiness Project Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Status__c</fullName>
        <inlineHelpText>Current status of the request. Defines the action to be taken on the request.</inlineHelpText>
        <label>Request Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Ready For Approval by Committee</fullName>
                </value>
                <value>
                    <fullName>Approved By Committee</fullName>
                </value>
                <value>
                    <fullName>Declined By Committee</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>No Action Required</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Awaiting on Other Dependencies</fullName>
                </value>
                <value>
                    <fullName>1-Draft in Progress</fullName>
                </value>
                <value>
                    <fullName>2-Ready for Review</fullName>
                </value>
                <value>
                    <fullName>3A-Conceptually Approved</fullName>
                </value>
                <value>
                    <fullName>3B-Pending Revision</fullName>
                </value>
                <value>
                    <fullName>3C-Execution Approved</fullName>
                </value>
                <value>
                    <fullName>3D-Declined</fullName>
                </value>
                <value>
                    <fullName>4A-Implemented</fullName>
                </value>
                <value>
                    <fullName>4B-Failed</fullName>
                </value>
                <value>
                    <fullName>Execution Approved</fullName>
                </value>
                <value>
                    <fullName>Submitted For Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <isActive>false</isActive>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New SKU</fullName>
                </value>
                <value>
                    <fullName>SKU Modification</fullName>
                </value>
                <value>
                    <fullName>Both (New SKU &amp; Modification)</fullName>
                </value>
                <value>
                    <fullName>SKU Removal - Sunset</fullName>
                </value>
                <value>
                    <fullName>SKU Removal - Sunset with Replacement</fullName>
                </value>
                <value>
                    <fullName>SKU Removal - BOTH Sunset and Sunset with Replacement</fullName>
                </value>
                <value>
                    <fullName>Major Change- New Product or New Major Version of a Product</fullName>
                </value>
                <value>
                    <fullName>Major Change- New Program</fullName>
                </value>
                <value>
                    <fullName>Major Change- Client or Business Requirement</fullName>
                </value>
                <value>
                    <fullName>Minor Change- All other changes including minor product release, process change, procedure change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Governance_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requested_Change__c</fullName>
        <label>Requested Change</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Requester_Department__c</fullName>
        <label>Requester Department</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>IT Corp System</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requester_Name1__c</fullName>
        <formula>CreatedBy.FirstName &amp;" "&amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requester Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requester_Name__c</fullName>
        <label>Requester Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Revenue Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer_Comments__c</fullName>
        <inlineHelpText>Record any key poins durng the approval discussion.</inlineHelpText>
        <label>Reviewer Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SF_Governance_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SF Governance Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Comments_EC__c</fullName>
        <label>Sales Comments (EC)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Comments_ENT__c</fullName>
        <label>Sales Comments (ENT)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Comments__c</fullName>
        <label>Sales Comments (HC)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_EC__c</fullName>
        <label>Sales (EC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_ENT__c</fullName>
        <label>Sales (ENT)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conceptually Approved</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_HC__c</fullName>
        <label>Sales (HC)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <label>Conceptually Approved</label>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>To Be Discussed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Sales_ops__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sales/Sales ops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seeking_Status__c</fullName>
        <inlineHelpText>What status are you seeking for this request?</inlineHelpText>
        <label>Seeking Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-Draft in Progress</fullName>
                </value>
                <value>
                    <fullName>2-Ready for Review</fullName>
                </value>
                <value>
                    <fullName>3A-Conceptually Approved</fullName>
                </value>
                <value>
                    <fullName>3B-Pending Revision</fullName>
                </value>
                <value>
                    <fullName>3C-Execution Approved</fullName>
                </value>
                <value>
                    <fullName>3D-Declined</fullName>
                </value>
                <value>
                    <fullName>4A-Implemented</fullName>
                </value>
                <value>
                    <fullName>4B-Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Test__c</fullName>
        <label>Status of Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not done</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Done</fullName>
                </value>
                <value>
                    <fullName>Not required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TTI_Requirement_Gathering__c</fullName>
        <label>TTI Requirement Gathering</label>
        <summaryForeignKey>CMR_Requirement_Gathering__c.Change_Management_Request__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tax</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weekend_Days__c</fullName>
        <formula>(CASE(MOD( Approved_Date__c - DATE(1985,6,24),7), 
0 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),1,0,2,0,3,0,4,0,5,1,6,2,0), 
1 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),0,0,1,0,2,0,3,0,4,0,5,2,2), 
2 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),0,0,1,0,2,0,3,1,2), 
3 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),0,0,1,0,2,1,2), 
4 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),0,0,1,1,2), 
5 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),0,1,2), 
6 , CASE( MOD( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c,7),6,2,1), 
999) 
+ 
(FLOOR(( DATEVALUE(Case_Closed_Date__c) - Approved_Date__c)/7)*2))</formula>
        <label>Weekend Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>